--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
+    "build":"npm install --force",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ramkumar G",
