--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Testing",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "build":"npm install --force",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
